--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "prisma": "^5.2.0",
     "tsup": "^7.2.0",
     "tsx": "^3.12.9",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@prisma/client": "^5.2.0",
     "fastify": "^4.23.0"
   }
 }
