--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "dotenv": "^16.3.1",
     "prisma": "^5.2.0",
     "tsup": "^7.2.0",
     "tsx": "^3.12.9",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@prisma/client": "^5.2.0",
-    "fastify": "^4.23.0"
+    "fastify": "^4.23.0",
+    "zod": "^3.22.2"
   }
 }
