--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
+# CHECK IF APP IS NOW DEVELOPING 
+NODE_ENV=""
+
+# DATABASE ENV
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+# OPENAI KEY
+OPENAI_KEY=
