--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/multipart": "^7.7.3",
     "@prisma/client": "^5.2.0",
     "fastify": "^4.23.0",
+    "openai": "^4.6.0",
     "zod": "^3.22.2"
   }
 }
