--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node dist/server.js",
-    "build": "tsup src"
+    "build": "tsup src",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.6.0",
     "dotenv": "^16.3.1",
+    "eslint": "^8.49.0",
     "prisma": "^5.2.0",
     "tsup": "^7.2.0",
     "tsx": "^3.12.9",
